deploy: 5d64ed3c73ae4723497427a59b516bfb22a86b7f

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset='utf-8'>
-  <title>@thesharks/tyr 1.1.3 | Documentation</title>
-  <meta name='description' content='Lavalink implementation'>
+  <title>@thesharks/tyr 1.2.0 | Documentation</title>
+  <meta name='description' content='Lightweight Lavalink implementation'>
   <meta name='viewport' content='width=device-width,initial-scale=1'>
   <link href='assets/bass.css' rel='stylesheet'>
   <link href='assets/style.css' rel='stylesheet'>
@@ -15,7 +15,7 @@
       <div id='split-left' class='overflow-auto fs0 height-viewport-100'>
         <div class='py1 px2'>
           <h3 class='mb0 no-anchor'>@thesharks/tyr</h3>
-          <div class='mb1'><code>1.1.3</code></div>
+          <div class='mb1'><code>1.2.0</code></div>
           <input
             placeholder='Filter'
             id='filter-input'
