deploy: 6c0f9a457f90230a38bdccfea47bea97279e153d

--- a/enums/lavalinktypes.filter.html
+++ b/enums/lavalinktypes.filter.html
@@ -93,7 +93,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-external">
 					<a name="distortion" class="tsd-anchor"></a>
 					<h3>Distortion</h3>
-					<div class="tsd-signature tsd-kind-icon">Distortion<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;Distortion&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">Distortion<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;distortion&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@lavaclient/types/dist/filters.d.ts:10</li>
