--- a/interfaces/lavalinktypes.configureresumingdata.html
+++ b/interfaces/lavalinktypes.configureresumingdata.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PauseData | @thesharks/tyr</title>
+	<title>ConfigureResumingData | @thesharks/tyr</title>
 	<meta name="description" content="Documentation for @thesharks/tyr">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -58,10 +58,10 @@
 					<a href="../modules/lavalinktypes.html">LavalinkTypes</a>
 				</li>
 				<li>
-					<a href="lavalinktypes.pausedata.html">PauseData</a>
+					<a href="lavalinktypes.configureresumingdata.html">ConfigureResumingData</a>
 				</li>
 			</ul>
-			<h1>Interface PauseData</h1>
+			<h1>Interface ConfigureResumingData</h1>
 		</div>
 	</div>
 </header>
@@ -72,7 +72,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">PauseData</span>
+						<span class="target">ConfigureResumingData</span>
 					</li>
 				</ul>
 			</section>
@@ -83,7 +83,8 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.pausedata.html#pause" class="tsd-kind-icon">pause</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.configureresumingdata.html#key" class="tsd-kind-icon">key</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.configureresumingdata.html#timeout" class="tsd-kind-icon">timeout</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,12 +93,22 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="pause" class="tsd-anchor"></a>
-					<h3>pause</h3>
-					<div class="tsd-signature tsd-kind-icon">pause<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<a name="key" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> key</h3>
+					<div class="tsd-signature tsd-kind-icon">key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:89</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:58</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="timeout" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> timeout</h3>
+					<div class="tsd-signature tsd-kind-icon">timeout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:57</li>
 						</ul>
 					</aside>
 				</section>
@@ -122,10 +133,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-namespace tsd-is-external">
-						<a href="lavalinktypes.pausedata.html" class="tsd-kind-icon">Pause<wbr>Data</a>
+						<a href="lavalinktypes.configureresumingdata.html" class="tsd-kind-icon">Configure<wbr>Resuming<wbr>Data</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="lavalinktypes.pausedata.html#pause" class="tsd-kind-icon">pause</a>
+								<a href="lavalinktypes.configureresumingdata.html#key" class="tsd-kind-icon">key</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="lavalinktypes.configureresumingdata.html#timeout" class="tsd-kind-icon">timeout</a>
 							</li>
 						</ul>
 					</li>
