--- a/interfaces/lavalinktypes.equalizerdata.html
+++ b/interfaces/lavalinktypes.equalizerdata.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PauseData | @thesharks/tyr</title>
+	<title>EqualizerData | @thesharks/tyr</title>
 	<meta name="description" content="Documentation for @thesharks/tyr">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -58,10 +58,10 @@
 					<a href="../modules/lavalinktypes.html">LavalinkTypes</a>
 				</li>
 				<li>
-					<a href="lavalinktypes.pausedata.html">PauseData</a>
+					<a href="lavalinktypes.equalizerdata.html">EqualizerData</a>
 				</li>
 			</ul>
-			<h1>Interface PauseData</h1>
+			<h1>Interface EqualizerData</h1>
 		</div>
 	</div>
 </header>
@@ -72,7 +72,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">PauseData</span>
+						<span class="target">EqualizerData</span>
 					</li>
 				</ul>
 			</section>
@@ -83,7 +83,7 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.pausedata.html#pause" class="tsd-kind-icon">pause</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.equalizerdata.html#bands" class="tsd-kind-icon">bands</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,12 +92,12 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="pause" class="tsd-anchor"></a>
-					<h3>pause</h3>
-					<div class="tsd-signature tsd-kind-icon">pause<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<a name="bands" class="tsd-anchor"></a>
+					<h3>bands</h3>
+					<div class="tsd-signature tsd-kind-icon">bands<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.equalizerband.html" class="tsd-signature-type" data-tsd-kind="Interface">EqualizerBand</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:89</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:114</li>
 						</ul>
 					</aside>
 				</section>
@@ -122,10 +122,10 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-namespace tsd-is-external">
-						<a href="lavalinktypes.pausedata.html" class="tsd-kind-icon">Pause<wbr>Data</a>
+						<a href="lavalinktypes.equalizerdata.html" class="tsd-kind-icon">Equalizer<wbr>Data</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="lavalinktypes.pausedata.html#pause" class="tsd-kind-icon">pause</a>
+								<a href="lavalinktypes.equalizerdata.html#bands" class="tsd-kind-icon">bands</a>
 							</li>
 						</ul>
 					</li>
