--- a/interfaces/lavalinktypes.filterdata.html
+++ b/interfaces/lavalinktypes.filterdata.html
@@ -83,7 +83,7 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.filterdata.html#distortion" class="tsd-kind-icon">Distortion</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.filterdata.html#distortion" class="tsd-kind-icon">distortion</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.filterdata.html#equalizer" class="tsd-kind-icon">equalizer</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.filterdata.html#karaoke" class="tsd-kind-icon">karaoke</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="lavalinktypes.filterdata.html#rotation" class="tsd-kind-icon">rotation</a></li>
@@ -100,11 +100,11 @@
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="distortion" class="tsd-anchor"></a>
-					<h3>Distortion</h3>
-					<div class="tsd-signature tsd-kind-icon">Distortion<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.distortionfilter.html" class="tsd-signature-type" data-tsd-kind="Interface">DistortionFilter</a></div>
+					<h3>distortion</h3>
+					<div class="tsd-signature tsd-kind-icon">distortion<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.distortionfilter.html" class="tsd-signature-type" data-tsd-kind="Interface">DistortionFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:41</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:45</li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">equalizer<span class="tsd-signature-symbol">:</span> <a href="../modules/lavalinktypes.html#equalizerfilter" class="tsd-signature-type" data-tsd-kind="Type alias">EqualizerFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:35</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:39</li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">karaoke<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.karaokefilter.html" class="tsd-signature-type" data-tsd-kind="Interface">KaraokeFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:36</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:40</li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">rotation<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.rotationfilter.html" class="tsd-signature-type" data-tsd-kind="Interface">RotationFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:40</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:44</li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">timescale<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.timescalefilter.html" class="tsd-signature-type" data-tsd-kind="Interface">TimescaleFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:37</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:41</li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">tremolo<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.oscillatingfilter.html" class="tsd-signature-type" data-tsd-kind="Interface">OscillatingFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:38</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:42</li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">vibrato<span class="tsd-signature-symbol">:</span> <a href="lavalinktypes.oscillatingfilter.html" class="tsd-signature-type" data-tsd-kind="Interface">OscillatingFilter</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:39</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:43</li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">volume<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:34</li>
+							<li>Defined in node_modules/@lavaclient/types/dist/message.d.ts:38</li>
 						</ul>
 					</aside>
 				</section>
@@ -202,7 +202,7 @@
 						<a href="lavalinktypes.filterdata.html" class="tsd-kind-icon">Filter<wbr>Data</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="lavalinktypes.filterdata.html#distortion" class="tsd-kind-icon">Distortion</a>
+								<a href="lavalinktypes.filterdata.html#distortion" class="tsd-kind-icon">distortion</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 								<a href="lavalinktypes.filterdata.html#equalizer" class="tsd-kind-icon">equalizer</a>
