--- a/interfaces/NodeOptions.html
+++ b/interfaces/NodeOptions.html
@@ -90,6 +90,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#password" class="tsd-kind-icon">password</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#port" class="tsd-kind-icon">port</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#region" class="tsd-kind-icon">region</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#resumeToken" class="tsd-kind-icon">resume<wbr>Token</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#shards" class="tsd-kind-icon">shards</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="NodeOptions.html#user" class="tsd-kind-icon">user</a></li>
 							</ul>
@@ -105,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">auto<wbr>Reconnect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L34">src/interfaces/NodeOptions.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L34">src/interfaces/NodeOptions.ts:34</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">host<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L5">src/interfaces/NodeOptions.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L5">src/interfaces/NodeOptions.ts:5</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">password<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L17">src/interfaces/NodeOptions.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L17">src/interfaces/NodeOptions.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L9">src/interfaces/NodeOptions.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L9">src/interfaces/NodeOptions.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -170,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">region<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L29">src/interfaces/NodeOptions.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L29">src/interfaces/NodeOptions.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -187,12 +188,27 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="resumeToken" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> resume<wbr>Token</h3>
+					<div class="tsd-signature tsd-kind-icon">resume<wbr>Token<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L38">src/interfaces/NodeOptions.ts:38</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The resumption token to use when reconnecting to the node</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="shards" class="tsd-anchor"></a>
 					<h3>shards</h3>
 					<div class="tsd-signature tsd-kind-icon">shards<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L13">src/interfaces/NodeOptions.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L13">src/interfaces/NodeOptions.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -207,7 +223,7 @@
 					<div class="tsd-signature tsd-kind-icon">user<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/b48ee73/src/interfaces/NodeOptions.ts#L21">src/interfaces/NodeOptions.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/TheSharks/Tyr/blob/1aa1d37/src/interfaces/NodeOptions.ts#L21">src/interfaces/NodeOptions.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -253,6 +269,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="NodeOptions.html#region" class="tsd-kind-icon">region</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="NodeOptions.html#resumeToken" class="tsd-kind-icon">resume<wbr>Token</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="NodeOptions.html#shards" class="tsd-kind-icon">shards</a>
